<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="T_Logger_DCH" Id="{e5bb4cc2-6bf9-4ba5-8fa2-6b201584397b}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation' := ''}
TYPE T_Logger_DCH :
STRUCT
	eLevel					: E_SabberLoggerLevel;
	strTimeStamp			: STRING;
	strController			: STRING;
	strMessage				: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>